@@ -3,6 +3,7 @@
    don't have any circle defined
  - fix: interface was not updated (e.g. list of uploads), because
    of wrong default parameter
+ - fix: avoid upload jobs with invalid dataset IDs
 0.5.1
  - build: fix Windows build pipeline
 0.5.0
